Fix proxy port issue
